# armNeon

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: main.cpp
src/KwsAgc/: KwsAgc.hpp  KwsAgcParams.hpp
src/util/: util.hpp
